--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,8 @@
   width: 100px;
   border: 2px solid black;
   background-color: cornflowerblue;
+  padding-left: 10px;
+  padding-right: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
